# LiterPurple

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
docs/: api.md  architecture.md  developer-setup.md
src/: error.rs  ffi.rs  lib.rs  main.rs  model.rs  service.rs  transport.rs  validation.rs
tests/: cli.rs
