[package]
name = "litterpurple"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Windows-first SysCFG utility prototype for supported, externally prepared devices."
repository = "https://github.com/example/litterpurple"
keywords = ["syscfg", "ios", "windows", "cli"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "litterpurple"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
